--- a/YouTubeAssist/YouTubeAssist.csproj
+++ b/YouTubeAssist/YouTubeAssist.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <None Remove="App.Secrets.config" />
     <None Remove="Assets\Images\icon_256x256.ico" />
+    <None Remove="Assets\Images\no_result_256.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -21,6 +22,9 @@
 
   <ItemGroup>
     <Resource Include="Assets\Images\icon_256x256.ico">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Assets\Images\no_result_256.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
