--- a/WebExt/package.json
+++ b/WebExt/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "esbuild": "^0.24.0",
     "esbuild-plugin-copy": "^2.1.1",
+    "esbuild-plugin-sass": "^1.0.1",
     "typescript": "^5.6.3"
   },
   "scripts": {
