--- a/ClientHost/ClientHost.csproj
+++ b/ClientHost/ClientHost.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="call &quot;$(ProjectDir)post-build.bat&quot; $(MSBuildProjectName) $(OutDir)" />
+  </Target>
+
 </Project>
