--- a/WebExt/src/manifest.json
+++ b/WebExt/src/manifest.json
@@ -10,6 +10,12 @@
     "48": "images/icon-48.png",
     "128": "images/icon-128.png"
   },
+  "permissions": [
+    "nativeMessaging"
+  ],
+  "background": {
+    "service_worker": "service-worker.js"
+  },
   "action": {
     "default_popup": "popup/popup.html"
   }
