--- a/WebExt/package.json
+++ b/WebExt/package.json
@@ -6,6 +6,8 @@
     "node": ">=20.10.0"
   },
   "devDependencies": {
+    "@types/chrome": "^0.0.279",
+    "chrome-types": "^0.1.312",
     "esbuild": "^0.24.0",
     "esbuild-plugin-copy": "^2.1.1",
     "esbuild-plugin-sass": "^1.0.1",
