--- a/Web/package.json
+++ b/Web/package.json
@@ -14,6 +14,6 @@
     "typescript": "^5.6.3"
   },
   "scripts": {
-    "build": "node src/build.js"
+    "build-ext": "node src/WebExt/build.js"
   }
 }
