--- a/Web/tsconfig.json
+++ b/Web/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "compilerOptions": {
-    "target": "esnext",
-    "module": "esnext",
-    "outDir": "./build"
+    "target": "ESNext",
+    "module": "ESNext",
+    "sourceMap": true,
+    "allowJs": true,
+    "outDir": "./build",
+    "types": ["chrome"]
   }
 }
