--- a/Web/src/WebExt/manifest.json
+++ b/Web/src/WebExt/manifest.json
@@ -10,6 +10,11 @@
     "48": "images/icon-48.png",
     "128": "images/icon-128.png"
   },
+  "externally_connectable": {
+    "matches": [
+      "http://localhost/*"
+    ]
+  },
   "permissions": [
     "activeTab",
     "nativeMessaging"
