--- a/ClientHost/ClientHost.csproj
+++ b/ClientHost/ClientHost.csproj
@@ -11,4 +11,8 @@
     <Exec Command="call &quot;$(ProjectDir)post-build.bat&quot; $(MSBuildProjectName) $(OutDir)" />
   </Target>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CommonLibrary\CommonLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
