--- a/YouTubeAssist/App.config
+++ b/YouTubeAssist/App.config
@@ -1,3 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+	<appSettings file="App.Secrets.config">
+		<add key="TestKey" value="TestVal" />
+	</appSettings>
 </configuration>
